# parmenides

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
api/: pyproject.toml  query.ipynb
api/models/: token_data.py
api/src/: token.py
bla/: utils.py
config/: settings.yml
examples/: query.ipynb
functions/: config_token.json  token.py
models/: token_data.py  value_sets.py
schemas/: token_data.py
src/: token.py
tests/: test_fhir_app.py  test_utils.py
utils/: __init__.py  fhir_api.py  token.py  utils.py
