[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

